# yag

./: CMakeLists.txt  README.md  test_central.sh
.yag/: config  index
.yag/branches/: main
.yag/logs/: HEAD
cli/: main.cpp
core/: branch.cpp  branch.h  commit.cpp  commit.h  diff.cpp  diff.h  doctor.cpp  doctor.h  gc.cpp  gc.h  lock.cpp  lock.h  repo.cpp  repo.h  scp_transport.cpp  scp_transport.h  staging.cpp  staging.h  sync.cpp  sync.h
scratch/: verify_paths  verify_paths.cpp
utils/: file_utils.cpp  file_utils.h  hash.cpp  hash.h
